--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -124,6 +124,46 @@ input[type=button]:hover {
 	background: #dadada;
 }
 
+/* On mouse hover, lighten state color */
+path:hover {
+	fill-opacity: .7;
+}
+
+/* Style for Custom Tooltip */
+div.tooltip {
+	position: absolute;
+	text-align: center;
+	width: 140px;
+	height: 28px;
+	padding: 2px;
+	font: 12px sans-serif;
+	background: white;
+	border: 0px;
+	border-radius: 8px;
+	pointer-events: none;
+}
+
+/* Legend Font Style */
+body {
+	font: 11px sans-serif;
+}
+
+/* Legend Position Style */
+.legend {
+	position:absolute;
+	left:800px;
+	top:350px;
+}
+
+.arc text {
+  font: 10px sans-serif;
+  text-anchor: middle;
+}
+
+.arc path {
+  stroke: #fff;
+}
+
 @media only screen and (max-width : 320px) {
 	body {
 		/*margin: 20px 0;*/
