--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,32 @@
-div.map {
+div.map
+{
 	width: 50%;
+	float:right;
+	height: 450px;
+}
+
+div.pie
+{
+	width: 50%;
+	float: left;
+	height: 450px;
+}
+
+div.legend {
+	width:20%;
+	float:right;
+}
+
+div.options {
+	width:50%;
+	height: 450px;
 	float:left;
 }
 
-div.pie {
-	width: 50%;
-	float: left;
+div.list {
+	width:50%;
+	float:right;
+	height: 450px;
 }
 
 body {
@@ -42,9 +63,7 @@ h1 {
     border-radius: 6px;
 }
 h2 {
-	font-size: 15px;
-	color: #a0a0a0;
-	margin: 30px 0;
+	font-weight: bold;
 }
 label {
 	display: block;
@@ -67,7 +86,7 @@ p, .control-group {
 	border-bottom: 0 none;
 }
 .selectors select, .selectors input, .selectors .selectize-control {
-	width: 25%;
+	width: 35%;
 	padding: 10px;
 }
 .selectors > *:first-child {
@@ -159,10 +178,11 @@ body {
 }
 
 /* Legend Position Style */
-.legend {
-	position:absolute;
-	left:800px;
-	top:350px;
+.legend {                                                   /* NEW */
+	font-size: 12px;                                          /* NEW */
+}                                                           /* NEW */
+rect {                                                      /* NEW */
+	stroke-width: 1;                                          /* NEW */
 }
 
 .arc text {
@@ -173,6 +193,19 @@ body {
 .arc path {
   stroke: #fff;
 }
+
+div.pie-tooltip {
+	position: absolute;
+	text-align: center;
+	width: 140px;
+	height: 40px;
+	padding: 2px;
+	font: 12px sans-serif;
+	background: white;
+	border: 0px;
+	border-radius: 8px;
+	pointer-events: none;
+
 
 @media only screen and (max-width : 320px) {
 	body {
